--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Premium Calculator</string>
     <string name="two_wheeler_insurance">Two Wheeler Insurance</string>
     <string name="private_car_insurance">Private Car Insurance</string>
+    <string name="taxilessthan6_insurance">Taxi less than 6 passenger Insurance</string>
     <string name="last_year_idv">Last Year IDV</string>
     <string name="depreciation">Depreciation(%)</string>
     <string name="year_of_manufacture">Year of Manufacture</string>
