Two Wheeler + Private Car + pdf done + layout finalised + date of registration added + shared preferences done + Share functionality added - Rates of Vehicle to be adjusted - Commission feature to be added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="last_year_idv">Last Year IDV</string>
     <string name="depreciation">Depreciation(%)</string>
     <string name="year_of_manufacture">Year of Manufacture</string>
+    <string name="date_of_registration">Date Of Registration</string>
     <string name="zone">Zone</string>
     <string name="cubic_capacity">Cubic Capacity</string>
     <string name="discount_on_od">Discount on OD(%)</string>
