--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="private_carrier">Private Carrier</string>
     <string name="cng_lpg">CNG/LPG</string>
     <string name="pcv_3_wheeler_insurance">PCV 3 Wheeler Insurance</string>
+    <string name="goods_carrying_vehicle">Goods Carrying Vehicle</string>
+    <string name="gross_vehicle_weight_kgs">Gross Vehicle Weight(Kgs)</string>
+    <string name="non_faring_passenger_nfpp">Non Faring Passenger(NFPP)</string>
+    <string name="geographical_extension">Geographical Extension</string>
     <string-array name="zone_array">
         <item>A</item>
         <item>B</item>
