--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="geographical_extension">Geographical Extension</string>
     <string name="bus_more_than_6_passenger">Bus More than 6 Passenger</string>
     <string name="school_bus">School Bus</string>
+    <string name="miscellaneous_vehicle">Miscellaneous Vehicle</string>
+    <string name="cover_overturning">Cover Overturning</string>
+    <string name="choose_vehicle">Choose Vehicle</string>
     <string-array name="zone_array">
         <item>A</item>
         <item>B</item>
@@ -48,6 +51,16 @@
         <item>35</item>
         <item>45</item>
         <item>50</item>
+    </string-array>
+    <string-array name="vehicle_array">
+        <item>Tractor</item>
+        <item>Ambulance</item>
+        <item>Drilling Rigs</item>
+        <item>Trailer</item>
+    </string-array>
+    <string-array name="vehicleuse_array">
+        <item>Agricultural</item>
+        <item>Others</item>
     </string-array>
     <string-array name="company_list">
         <item>Choose an insurer…</item>
